# PIXL

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  .renovaterc.json5  .secrets.env.sample  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  codecov.yml  docker-compose.yml  index.md  mypy.ini  pixl_config.yml.sample  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  template_config.yaml  toc.md
cli/: README.md  pyproject.toml  toc.md  virtual-environment.md
cli/src/: README.md  requirements.txt  setup.py
cli/src/pixl_cli/: README.md  __init__.py  _config.py  _database.py  _docker_commands.py  _ehr.py  _io.py  _logging.py  _message_processing.py  _pacs.py  _utils.py  _version.py  main.py
cli/test/: .env.test  create_random_csv.py  docker-compose.yml  namespace.test.json  pixl_config.yml  run-tests.sh  test.csv  test_queue_has_messages.py  tmp.csv  wait-until-service-healthy.sh
cli/tests/: README.md  conftest.py  docker-compose.yml  pixl_config.yml  run-tests.sh  test_check_env.py  test_copy_omop.py  test_database.py  test_db.py  test_docker_commands.py  test_io.py  test_message_processing.py  test_messages_from_files.py  test_messages_from_parquet.py  test_populate.py  test_queue_start_and_stop.py  test_queue_start_and_stop_parquet.py  toc.md
cli/tests/resources/: test.csv
hasher/: README.md  pyproject.toml  ruff.toml  toc.md
hasher/src/: README.md  requirements.txt  setup.py
hasher/src/hasher/: README.md  __init__.py  endpoints.py  hashing.py  local.env.sample  main.py  settings.py
hasher/tests/: README.md  conftest.py  test_endpoints.py  test_hashing.py
pixl_core/: README.md  pyproject.toml  ruff.toml  toc.md
pixl_core/src/: README.md
pixl_core/src/core/: README.md  __init__.py  _database.py  _secrets.py  _upload_ftps.py  config.py  database.py  dicom_tags.py  exceptions.py  exports.py  file_upload.py  logging.py  metrics.py  models.py  omop.py  project_config.py  queries.py  router.py  telemetry.py  tracing.py  upload.py
pixl_core/tests/: Dockerfile  README.md  conftest.py  docker-compose.dicomweb.yml  docker-compose.yml  test_config.py  test_exports.py  test_logging.py  test_metrics.py  test_project_config.py  test_tracing.py  test_upload.py
pixl_core/tests/data/: README.md  xnat_project.xml
pixl_core/tests/ftp-server/: Dockerfile
pixl_core/tests/patient_queue/: README.md  test_message.py  test_producer.py  test_subscriber.py  test_utils.py
pixl_core/tests/project_config/: README.md  test_project_config.py  test_secrets.py
pixl_core/tests/token_buffer/: README.md  test_tokens.py
pixl_core/tests/uploader/: README.md  test_base.py  test_dicomweb.py  test_ftps.py  test_sftp.py  test_treapi.py  test_xnat.py
pixl_dcmd/: MANIFEST.in  README.md  pyproject.toml  ruff.toml  toc.md
pixl_dcmd/src/: README.md  pixl_config.yml  requirements.txt  setup.py
pixl_dcmd/src/pixl_dcmd/: README.md  __init__.py  _config.py  _database.py  _datetime.py  _deid_helpers.py  _dicom_helpers.py  _tag_schemes.py  _tagschemes.py  _version.py  dicom_helpers.py  main.py  tagrecording.py
pixl_dcmd/tests/: README.md  conftest.py  test_database.py  test_datetime.py  test_deid_helpers.py  test_dicom_validator.py  test_main.py  test_tag_schemes.py  test_tagrecording.py  test_tagschemes.py
pixl_ehr/: README.md  pyproject.toml
pixl_ehr/src/: requirements.txt  setup.py
pixl_ehr/src/pixl_ehr/: _databases.py  _processing.py  _queries.py  main.py  utils.py
pixl_ehr/test/: Dockerfile.fake_emap_star  docker-compose.yml  run-lint-and-api-tests.sh  run-processing-tests.sh  run-system-tests.sh  run-tests.sh  tmp.py
pixl_ehr/tests/: conftest.py  docker-compose.yml  run-lint-and-api-tests.sh  run-processing-tests.sh  run-tests.sh  test_app.py  test_deidentification.py  test_ehr_processing.py  test_processing.py
pixl_ehr/tests/dummy-services/: Dockerfile  cogstack.py
pixl_export/: README.md  pyproject.toml  toc.md
pixl_export/src/: README.md
pixl_export/src/pixl_export/: README.md  _databases.py  _orthanc.py  main.py
pixl_export/tests/: README.md  conftest.py  docker-compose.yml  test_app.py  test_export_processing.py
pixl_imaging/: README.md  pyproject.toml  toc.md
pixl_imaging/alembic/: README.md  alembic.ini  autogenerate-migration.sh  env.py  migrations.env  toc.md
pixl_imaging/alembic/versions/: 83dcb3812628_add_study_uid_column_to_image_table.py  README.md  bcaef54e2bfe_.py  bcaef54e2bfe_create_extract_and_image_tables.py  cb5ee12a6e20_replace_hashed_id_with_pseudo_study_uid.py  d947cc715eb1_add_pseudo_patient_id_column_to_image_table.py  d947cc715eb1_description_of_changes_to_models.py
pixl_imaging/scripts/: README.md  migrate_and_run.sh
pixl_imaging/src/: README.md
pixl_imaging/src/pixl_imaging/: README.md  _orthanc.py  _processing.py  main.py
pixl_imaging/src/pixl_pacs/: __init__.py  _processing.py
pixl_imaging/tests/: README.md  conftest.py  docker-compose.yml  run-tests.sh  test_imaging_processing.py  test_processing.py
pixl_imaging/tests/orthanc_raw_config/: README.md  dicom.json  orthanc.json
pixl_pacs/: README.md  pyproject.toml  ruff.toml
pixl_pacs/src/: requirements.txt  setup.py
pixl_pacs/src/pixl_pacs/: _orthanc.py  _processing.py  _version.py  main.py  utils.py
pixl_pacs/test/: Dockerfile.orthanc_raw_test  docker-compose.yml  run-lint-and-api-tests.sh  run-lint.sh  run-processing-tests.sh  run-tests.sh
pixl_pacs/test/orthanc_raw_config/: dicom.json  orthanc.json
pixl_pacs/test/vna_config/: dicom.json  orthanc.json
pixl_pacs/tests/: docker-compose.yml  run-tests.sh  test_processing.py
pixl_pacs/tests/orthanc_raw_config/: dicom.json
pytest-pixl/: README.md  pyproject.toml  toc.md
pytest-pixl/scripts/: README.md  create_default_dicom_tags_json.py
pytest-pixl/src/: README.md
pytest-pixl/src/pytest_pixl/: README.md  __init__.py  dicom.py  ftpserver.py  helpers.py  keyvault.py  plugin.py
pytest-pixl/src/resources/: README.md
pytest-pixl/tests/: README.md  conftest.py  test_ftpserver_fixture.py
test/dummy-services/cogstack/: Dockerfile  (+2 more)
testutils/: README.md  pyproject.toml
(+484 files in other folders)
