[project]
name = "pixl"
version = "0.2.0rc0"
description = "Top-level PIXL project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    'core',
    'pixl_cli',
    'pytest-pixl',
    "hasher",
    "pixl_dcmd",
    "pixl_export",
    "pixl_imaging",
]


[tool.uv.sources]
pixl_cli = { workspace = true }
core = { workspace = true }
pytest-pixl = { workspace = true }
hasher = { workspace = true }
pixl_dcmd = { workspace = true }
pixl_export = { workspace = true }
pixl_imaging = { workspace = true }

[tool.uv.workspace]
members = [
    "cli",
    "pixl_core",
    "pytest-pixl",
    "hasher",
    "pixl_dcmd",
    "pixl_export",
    "pixl_imaging",
]

[tool.hatch.build.targets.wheel]
dev-mode-dirs = [
    "cli",
    "pixl_core",
    "pytest-pixl",
    "hasher",
    "pixl_dcmd",
    "pixl_export",
    "pixl_imaging",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

