[project]
name = "pixl"
version = "0.2.0rc0"
description = "Top-level PIXL project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    'core',
    'pixl_cli',
    'pytest-pixl',
    "hasher",
    "pixl_dcmd",
    "pixl_export",
    "pixl_imaging",
]


[tool.uv.sources]
pixl_cli = { workspace = true }
core = { workspace = true }
pytest-pixl = { workspace = true }
hasher = { workspace = true }
pixl_dcmd = { workspace = true }
pixl_export = { workspace = true }
pixl_imaging = { workspace = true }

[tool.uv.workspace]
members = [
    "cli",
    "pixl_core",
    "pytest-pixl",
    "hasher",
    "pixl_dcmd",
    "pixl_export",
    "pixl_imaging",
]

[tool.hatch.build.targets.wheel]
include = [
    "cli/**",
    "pixl_core/**",
    "pytest-pixl/**",
    "hasher/**",
    "pixl_dcmd/**",
    "pixl_export/**",
    "pixl_imaging/**"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy==1.20.0",
    "pre-commit==4.5.1",
    "pytest==9.0.3",
    "ruff>=0.11",
    "pytest-mock==3.15.1",
    "httpx==0.28.*",
    "pytest-asyncio==1.3.0",
    "pytest-check==2.8.0",
    "pytest-cov==6.3.0",
    "pytest-pixl==0.2.0rc0",
    "xnat4tests==0.4.1",
    "dcm2niix==1.0.20250506",
    "nibabel==5.4.2",
]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:"
]
