[project]
name = "pixl_cli"
version = "0.0.4"
authors = [{ name = "PIXL authors" }]
description = "PIXL command line interface"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "core",
    "click==8.1.3",
    "tqdm==4.66.4",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.*",
    "pytest-mock==3.12.*",
    "pytest-pixl"
]
dev = [
    "mypy",
    "pre-commit",
    "ruff",
]

[project.scripts]
pixl = "pixl_cli.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "except subprocess.CalledProcessError as exception:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]