[project]
name = "hasher"
version = "0.1.0"
authors = [{ name = "PIXL authors" }]
description = "Service to securely hash identifiers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "core==0.1.0",
    "azure-identity==1.16.1",
    "azure-keyvault==4.2.0",
    "fastapi==0.112.0",
    "hypothesis==6.109.0",
    "requests==2.32.2",
    "uvicorn==0.30.4",
]

[project.optional-dependencies]
test = ["pytest==8.3.*", "httpx==0.27.*"]
dev = ["mypy", "pre-commit", "ruff"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.lint.extend-per-file-ignores]
"./tests/**" = ["D1"]
"./src/hasher/endpoints.py" = ["D103"]
