[project]
name = "hasher"
version = "0.2.0rc0"
authors = [{ name = "PIXL authors" }]
description = "Service to securely hash identifiers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "core==0.2.0rc0",
    "azure-identity==1.16.1",
    "azure-keyvault==4.2.0",
    "fastapi==0.112.0",
    "hypothesis==6.109.0",
    "requests==2.32.3",
    "uvicorn==0.30.4",
]

[project.optional-dependencies]
test = [
    "core[test]==0.2.0rc0",
]
dev = [
    "core[dev]==0.2.0rc0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.lint.extend-per-file-ignores]
"./tests/**" = ["D1"]
"./src/hasher/endpoints.py" = ["D103"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "except subprocess.CalledProcessError as exception:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
