[project]
name = "core"
version = "0.2.0rc0"
authors = [{ name = "PIXL core functionality" }]
description = ""
readme = "README.md"
requires-python = ">=3.13"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "aio_pika==9.6.2",
    "azure-identity==1.25.3",
    "azure-keyvault==4.2.0",
    "fastapi==0.135.3",
    "jsonpickle==4.1.1",
    "loguru==0.7.3",
    "pandas==2.3.3",
    "pika==1.3.2",
    "psycopg2-binary==2.9.11",
    "pyarrow==18.1.0",
    "pydantic==2.12.5",
    "python-decouple==3.8",
    "python-slugify==8.0.4",
    "PyYAML==6.0.3",
    "requests==2.33.0",
    "sqlalchemy==2.0.49",
    "token-bucket==0.3.0",
    "xnat==0.7.2",
]


[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
dev-mode-dirs = [
    "src"
]


[tool.pytest.ini_options]
markers = ["pika"]

[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.lint.extend-per-file-ignores]
"./tests/**" = ["D100"]


[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "except subprocess.CalledProcessError as exception:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
