[project]
name = "pixl_dcmd"
version = "0.0.2"
authors = [{ name = "PIXL authors" }]
description = "DICOM header anonymisation functions"
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "arrow==1.2.3",
    "pydicom==2.4.4",
    "pydicom-data",
    "logger==1.4",
    "requests==2.31.0",
    "python-decouple==3.6",
    "types-requests~=2.28",
    "dicom-anonymizer==1.0.12",
]

[project.optional-dependencies]
test = ["dcm2niix==1.0.20220715", "nibabel==5.2.0", "pytest==7.4.2"]
dev = ["mypy", "pre-commit", "ruff"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend = "./ruff.toml"

[tool.ruff.lint.extend-per-file-ignores]
"./tests/**" = ["D100"]

[tool.setuptools.package-data]
pixl_dcmd = ["resources/*.yml"]
