[project]
name = "pixl_dcmd"
version = "0.2.0rc0"
authors = [{ name = "PIXL authors" }]
description = "DICOM header anonymisation functions"
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "core==0.2.0rc0",
    "arrow==1.3.0",
    "pydicom==2.4.4",
    "pydicom-data",
    "logger==1.4",
    "requests==2.32.2",
    "python-decouple==3.8",
    "types-requests~=2.28",
    "dicom-anonymizer==1.0.12",
    "dicom-validator==0.6.2",
]

[project.optional-dependencies]
test = ["dcm2niix==1.0.20220715", "nibabel==5.2.1", "pytest==8.3.2", "pytest-pixl==0.2.0rc0"]
dev = ["mypy", "pre-commit", "ruff"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "except subprocess.CalledProcessError as exception:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]


[tool.ruff.lint.extend-per-file-ignores]
"./tests/**" = ["D100"]

[tool.setuptools.package-data]
pixl_dcmd = ["resources/*.yml"]
