[project]
name = "pixl_ehr"
version = "0.0.2"
authors = [{ name = "PIXL authors" }]
description = "PIXL electronic health record extractor"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "core",
    "uvicorn==0.23.2",
    "python-decouple==3.6",
    "psycopg2-binary==2.9.9",
    "azure-identity==1.12.0",
    "azure-storage-blob==12.14.1",
    "pyarrow==14.0.1",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.2",
    "pytest-asyncio==0.21.1",
    "pytest-pixl",
    "httpx==0.24.*",
]
dev = [
    "mypy",
    "pre-commit",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = ["processing"]

[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.lint.extend-per-file-ignores]
"./tests/**" = ["D1"]

[tool.setuptools.package-data]
pixl_ehr = ["sql/*.sql", "report_deid/*.txt"]
