[project]
name = "pixl_export"
version = "0.0.2"
authors = [{ name = "PIXL authors" }]
description = "PIXL electronic health record extractor"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "core",
    "uvicorn==0.30.3",
    "python-decouple==3.8",
    "psycopg2-binary==2.9.9",
    "azure-identity==1.16.1",
    "azure-storage-blob==12.21.0",
    "pyarrow==17.0.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
    "pytest-pixl",
    "httpx==0.27.*",
]
dev = [
    "mypy",
    "pre-commit",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "except subprocess.CalledProcessError as exception:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
markers = ["processing"]

[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.lint.extend-per-file-ignores]
"./tests/**" = ["D1"]

[tool.setuptools.package-data]
pixl_export = ["sql/*.sql", "report_deid/*.txt"]

