[project]
name = "pixl_export"
version = "0.2.0rc0"
authors = [{ name = "PIXL authors" }]
description = "PIXL electronic health record extractor"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "core==0.2.0rc0",
    "uvicorn==0.32.1",
    "azure-storage-blob==12.24.0",
]

[project.optional-dependencies]
test = [
    "core[test]==0.2.0rc0",
]
dev = [
    "core[dev]==0.2.0rc0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "except subprocess.CalledProcessError as exception:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
markers = ["processing"]

[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.lint.extend-per-file-ignores]
"./tests/**" = ["D1"]

[tool.setuptools.package-data]
pixl_export = ["sql/*.sql", "report_deid/*.txt"]

