[project]
name = "pixl_imaging"
version = "0.0.2"
authors = [{ name = "PIXL authors" }]
description = "PIXL image extractor"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "aiohttp==3.10.0",
    "alembic==1.13.2",
    "pydicom==2.4.4",
    "python-decouple==3.6",
    "uvicorn==0.23.2",
]

[project.optional-dependencies]
test = ["pytest==7.4.2", "pytest-asyncio==0.21.1"]
dev = ["mypy", "pre-commit", "ruff"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "except subprocess.CalledProcessError as exception:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
markers = ["processing"]

[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.lint.extend-per-file-ignores]
"./tests/**" = [
    "D1",     # Documentation of methods
    "S105",   # Hardcoded passwords
    "SLF001", # Access private members of a class
]
"./alembic/**" = [
    "INP001", # is part of an implicit namespace package. Add an `__init__.py`
    "D103",   # Missing docstring in public function
]
