[project]
name = "pixl_pacs"
version = "0.0.2"
authors = [
  { name="PIXL authors" },
]
description = "PIXL image extractor"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "core",
    "pydicom==2.3.0",
    "python-decouple==3.6"
]

[project.optional-dependencies]
test = [
    "pytest==7.4.2",
    "pytest-asyncio==0.20.2"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "processing"
]

[tool.setuptools.package-data]
pixl_ehr = ["sql/*.sql"]
