[project]
name = "pytest-pixl"
version = "0.2.0-rc"
authors = [{ name = "PIXL authors" }]
description = "Pytest plugin for PIXL"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "pydicom==2.4.4",
    "pyftpdlib==1.5.10",
    "python-decouple==3.8",
    "pyOpenSSL==24.2.1",
    "requests==2.32.2",
    "pytest-loguru==0.4.0",
]

[project.optional-dependencies]
test = [
    "core>=0.1.0",
    "pytest==8.3.2",
]
dev = [
    "mypy",
    "pre-commit",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"


[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "except subprocess.CalledProcessError as exception:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.setuptools.package-data]
pytest_pixl = ["*.key", "*.crt"]

[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.lint.extend-per-file-ignores]
"./tests/**" = ["D100"]

[project.entry-points.pytest11]
pytest_pixl = "pytest_pixl.plugin"
