[project]
name = "testutils"
version = "0.0.1"
authors = [
  { name="Functions to support testing PIXL" },
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "pydicom==2.4.4",
    "python-decouple==3.6",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.extend-per-file-ignores]
"./tests/**" = ["D100"]
