[project]
name = "cogstack"
version = "0.0.1"
authors = [
  { name="PIXL authors" },
]
description = "Service to mock the cogstack api"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "fastapi==0.109.1",
    "uvicorn==0.23.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

